--- a/.drone.yml
+++ b/.drone.yml
@@ -13,7 +13,6 @@ steps:
     environment:
       GOPROXY: https://goproxy.io
       GO111MODULE: on
-      sooty_tern_env: prod
 
   - name: publish
     image: plugins/docker
@@ -27,7 +26,7 @@ steps:
         from_secret: docker_password
       tags: prod
       build_args:
-        - sooty_tern_env=prod
+        - SOOTY_TERN_ENV=prod
 
   - name: deploy
     image: appleboy/drone-ssh
@@ -67,7 +66,6 @@ steps:
     environment:
       GOPROXY: https://goproxy.io
       GO111MODULE: on
-      sooty_tern_env: test
 
   - name: publish
     image: plugins/docker
@@ -81,7 +79,7 @@ steps:
         from_secret: docker_password
       tags: test
       build_args:
-        - sooty_tern_env=test
+        - SOOTY_TERN_ENV=test
 
   - name: deploy
     image: appleboy/drone-ssh
@@ -135,7 +133,6 @@ steps:
       tags: dev
       build_args:
         - SOOTY_TERN_ENV=dev
-
 
 trigger:
   branch:
