--- a/configs/app.test.toml
+++ b/configs/app.test.toml
@@ -65,6 +65,6 @@ table_prefix = "lz_"
 host = "lz_mysql"
 port= 3306
 user = "root"
-password = "root"
+password = "huanhuan0921"
 db_name = "lvzhou"
 parameters = "charset=utf8mb4&parseTime=True&loc=Local&allowNativePasswords=true"
