--- a/.drone.yml
+++ b/.drone.yml
@@ -17,7 +17,7 @@ steps:
   - name: publish
     image: plugins/docker
     settings:
-      registry: https://registry.cn-beijing.aliyuncs.com
+      registry: registry.cn-beijing.aliyuncs.com
       repo: meichaofan/sooty-tern
       dockerfile: ./Dockerfile
       Username:
@@ -70,7 +70,7 @@ steps:
   - name: publish
     image: plugins/docker
     settings:
-      registry: https://registry.cn-beijing.aliyuncs.com
+      registry: registry.cn-beijing.aliyuncs.com
       repo: meichaofan/sooty-tern
       dockerfile: ./Dockerfile
       Username:
@@ -123,7 +123,7 @@ steps:
   - name: publish
     image: plugins/docker
     settings:
-      registry: https://registry.cn-beijing.aliyuncs.com
+      registry: registry.cn-beijing.aliyuncs.com
       repo: meichaofan/sooty-tern
       dockerfile: ./Dockerfile
       Username:
